@@ -181,6 +181,11 @@ static struct ast_custom_function channel_function = {
 		"    remote_count          Number of transmitted packets\n"
 		"    rtt                   Round trip time\n"
 		"    all                   All statistics (in a form suited to logging, but not for parsing)\n"
+	        "R/O    rtpdest            Get remote RTP destination information\n"
+	        "       This option takes one additional argument:\n"
+                "  Argument 1:\n"
+                "    audio                 Get audio destination\n"
+                "    video                 Get video destination\n"
 		"\n"
 		"chan_iax2 provides the following additional options:\n"
 		"R/W    osptoken           Get or set the OSP token information for a call\n"
